hphp/hack/test/typecheck/expression_trees/negation.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  $neg_int = Code`-1`;
}
